RESOLVED FIXED137528
[iOS] LayoutTestRelay should ensure its DRT/WKTR dies when receiving kill/term signals
https://bugs.webkit.org/show_bug.cgi?id=137528
Summary [iOS] LayoutTestRelay should ensure its DRT/WKTR dies when receiving kill/ter...
David Farler
Reported 2014-10-08 10:47:11 PDT
If a test times out, webkitpy will kill the LayoutTestRelay. However, the signal isn't forwarded to the underlying DRT/WKTR. This used to not be a problem because when LayoutTestRelay gets launched with the same arguments, launching the same app identifier in the simulator would first quit the old instance. That's no longer the case and the same DRT/WKTR instance will be sitting there still timing out. So, we need to catch a signal and kill the simulator app before dying so that it can be properly relaunched when a timeout->kill happens.
Attachments
Patch (4.08 KB, patch)
2014-10-10 17:31 PDT, David Farler
simon.fraser: review+
David Farler
Comment 1 2014-10-10 17:31:07 PDT
Simon Fraser (smfr)
Comment 2 2014-10-10 17:49:09 PDT
Comment on attachment 239661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=239661&action=review > Tools/LayoutTestRelay/LayoutTestRelay/main.m:103 > + NSLog(@"FINISHING"); I don't think you want this. > Tools/Scripts/webkitpy/common/system/executive.py:202 > + os.kill(pid, signal.SIGTERM) This needs a comment I think.
David Farler
Comment 3 2014-10-10 18:09:32 PDT
Csaba Osztrogonác
Comment 4 2014-10-11 00:22:15 PDT
(In reply to comment #3) > Committed r174628: <http://trac.webkit.org/changeset/174628> It broke the related webkitpy unittest. Could you update its expected result?
Simon Fraser (smfr)
Comment 5 2014-10-11 08:48:58 PDT
This broke a python test.
Simon Fraser (smfr)
Comment 6 2014-10-11 11:07:47 PDT
I fixed this in r174634.
Note You need to log in before you can comment on or make changes to this bug.