Tools/LayoutTestRelay/LayoutTestRelay/LTRelayController.h
@@ -34,6 +34,7 @@
 @interface LTRelayController : NSObject <LTRelayDelegate>
 - (id)initWithDevice:(SimDevice *)device productDir:(NSString *)productDir appPath:(NSString *)appPath identifierSuffix:(NSString *)suffix dumpToolArguments:(NSArray *)arguments;
 - (void)start;
+- (void)finish;
 @end
 
 #endif
