Tools/LayoutTestRelay/LayoutTestRelay/main.m
@@ -28,6 +28,8 @@
 #import <CoreSimulator/CoreSimulator.h>
 #import <Foundation/Foundation.h>
 
+static LTRelayController *relayController;
+
 void usage()
 {
     NSString *helpText = @"LayoutTestRelay: run a dump tool in the simulator. Not for direct consumption.\n"
@@ -96,6 +98,16 @@ NSArray *getDumpToolArguments()
     return dumpToolArguments;
 }
 
+void finish()
+{
+    [relayController finish];
+}
+
+void receivedSignal(int signal)
+{
+    exit(EXIT_SUCCESS);
+}
+
 int main(int argc, const char * argv[])
 {
     @autoreleasepool {
@@ -127,8 +139,13 @@ int main(int argc, const char * argv[])
 
         SimDevice *device = getTestingSimDevice(deviceType, runtime);
 
-        LTRelayController *relayController = [[LTRelayController alloc] initWithDevice:device productDir:productDir appPath:appPath identifierSuffix:suffix dumpToolArguments:dumpToolArguments];
+        relayController = [[LTRelayController alloc] initWithDevice:device productDir:productDir appPath:appPath identifierSuffix:suffix dumpToolArguments:dumpToolArguments];
         [relayController start];
+
+        atexit(finish);
+        signal(SIGINT, receivedSignal);
+        signal(SIGTERM, receivedSignal);
+
         [[NSRunLoop mainRunLoop] run];
     }
     return 0;
